--- a/jpm.config
+++ b/jpm.config
@@ -1,11 +1,19 @@
-# The configuration file for DIF portfolio.
+# The configuration file for jpm.
 #
 
+#
+# config for the logging section
+#
 [logging]
-log_file = jpm.log
+log_file=jpm.log
 
-# debug, info, warning, error, critical
-log_level = debug
+# log level: debug, info, warning, error, critical
+log_level=debug
+
+# the directory to store log file, if store in current directory, leave it 
+# empty. Do not put "\" at the end of the directory.
+directory=
+# directory=C:\Program Files\Git\git
 
 
 
@@ -13,5 +21,13 @@ log_level = debug
 
 # Excel datemode for windows is 0, for mac is 1
 datemode = 0		
+
+
+
+[input]
+
+# the directory to look for input cash and positions files. Leave it empty
+# if in current directory.
+directory=C:\Users\zhangst\Desktop\data conversion\ListCo Equity 12307
 
 
