--- a/jpm.config
+++ b/jpm.config
@@ -28,6 +28,6 @@ datemode = 0
 
 # the directory to look for input cash and positions files. Leave it empty
 # if in current directory.
-directory=C:\Users\zhangst\Desktop\data conversion\ListCo Equity
-#directory=C:\Users\steven.zhang\Desktop\data conversion\ListCo Equity
+#directory=C:\Users\zhangst\Desktop\data conversion\ListCo Equity
+directory=C:\Users\steven.zhang\Desktop\data conversion\ListCo Equity
 
