--- a/jpm.config
+++ b/jpm.config
@@ -30,4 +30,4 @@ datemode = 0
 # if in current directory.
 #directory=C:\Users\zhangst\Desktop\data conversion\ListCo Equity
 directory=C:\Users\steven.zhang\Desktop\data conversion\ListCo Equity
-
+#directory=C:\Users\steven.zhang\Desktop\data conversion\CLO Equity
